--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 
 html{
     font-size: 62.5%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body{
@@ -83,8 +83,20 @@ section{
 }
 
 .home-img img{
-    width: 35vw;
+    width: 600px;
+    animation: floatImage 4s ease-in-out infinite;
+}
 
+@keyframes floatImage{
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-2.4rem);
+    }
+    100%{
+        transform: translateY(0);
+    }
 }
 
 .home-content h3{
@@ -152,12 +164,13 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 8rem;
     background: var(--second--bg-color);
 }
 
 .about-img img{
-    width: 35vw;
+    /* width: 35vw; */
+    width: 600px;
 }
 
 .heading{
@@ -389,6 +402,18 @@ span{
         padding: 10rem 3% 2rem;
     }
 
+    .services{
+        padding-bottom: 7rem;
+    }
+
+    .portfolio{
+        padding-bottom: 7rem;
+    }
+
+    .contact{
+        min-height: auto;
+    }
+
     .footer{
         padding: 2rem 3%;
     }
@@ -449,5 +474,45 @@ span{
 
     .services h2 {
         margin-bottom: 3rem;
+    }
+
+
+    .portfolio-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 617px){
+    .portfolio-container{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media(max-width: 450px){
+    html{
+        font-size: 50%;
+    }
+
+    .contact form .input-box input{
+        width: 100%;
+    }
+}
+
+@media(max-width: 365px){
+    .home-img img {
+        width: 250px;
+    }
+
+    .about-img img {
+        width: 250px;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .footer p{
+        text-align: center;
+        margin-top: 2rem;
     }
 }
